[package]
name = "spacechains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.26.0", features = ["all-keys", "sqlite-bundled", "rpc"] }
hex = "0.4.3"
dirs = "4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
confy = "0.5.1"
log = "0.4.17"
env_logger = "0.10.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
clap = { version = "4.1.4", features = ["derive"]}

[build-dependencies]
bdk = { version = "0.26.0" }
dirs = "4.0"
serde = { version = "1.0.152", features = ["derive"] }
confy = "0.5.1"
